Update modid and version in gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,5 @@ loom.platform=forge
 org.gradle.jvmargs=-Xmx2g
 baseGroup = com.github.zerosioo
 mcVersion = 1.8.9
-modid = entitycollector
-version = 1.0.0
+modid = keepitems
+version = 1.0
